@@ -3,6 +3,7 @@ New icons added
 Widget code changes
 Add sort letter on scrolling
 Add page and item numbers on scrollbar
+Add uninstall icon in addon info
 
 [B]0.9.21[/B]
 Fix musicvideo info
